# OpenCV

./: Procrustes_analysis.txt  README.md  图像特征  图像特征.md
opencv/: CMakeLists.txt  main.cpp  opencv.kdev4
opencv-examle/.kdev4/: opencv-examle.kdev4
opencv/.kdev4/: opencv.kdev4
